--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
     <head>
         <title>Spin and Win Workshop</title>
         <style>
+            body{
+                background: #000000;
+                padding: 0px;
+                margin: 0px;
+            }
             canvas{
-                width:100%;
+                display:block;
+                margin: 0;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                height: 100%;
             }
         
         </style>
